Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#755 closed bug (fixed)

[ScreenSaver] problems with password window

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Run ScreenSaver->Enable ScreenSaver->Password Lock->Password... Now hold your mouse on ScreenSaver tab and press Alt+F2 to switch to the second workspace. At this point you should see main window and password window to comnine. If you now press Alt+F1 you should see password window, pressing cancel button will not remove password window from screen until you erase it with another window. Tested under vmware with hrev18522. P.S. Password window isn't font sensitive.

Change History (4)

comment:1 by diver, 19 years ago

Another variation, i think: Type in terminal expander and move it to second workspace. Press destination button and the hold tab of _Expander_ window and press alt+1. Or maybe it's unrelated bugs?

comment:2 by axeld, 19 years ago

Status: newclosed

comment:3 by axeld, 19 years ago

No, it was the same bug, thanks! Fixed in hrev18592.

comment:4 by axeld, 19 years ago

Resolution: fixed
Note: See TracTickets for help on using tickets.