SetWorkspace() now also move the subset windows of the mouse event window to the new workspace - this fixes bug #755. Unlike floating windows, they aren't even redrawn :-)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18592 a95241bf-73f2-0310-859d-f6bbb57e9c96